Remove flag and template madness