@@ -25,47 +25,13 @@
 package gc.stress.systemgc;
 
 /*
- * @test id=default
+ * @test TestSystemGCWithSerial
  * @key stress
  * @bug 8190703
  * @library /
  * @requires vm.gc.Serial
  * @summary Stress the Serial GC full GC by allocating objects of different lifetimes concurrently with System.gc().
  * @run main/othervm/timeout=300 -Xlog:gc*=info -Xmx512m -XX:+UseSerialGC gc.stress.systemgc.TestSystemGCWithSerial 270
- */
-
-/*
- * @test id=alt-forwarding
- * @key stress
- * @bug 8190703
- * @library /
- * @requires vm.gc.Serial
- * @requires vm.debug
- * @summary Stress the Serial GC full GC by allocating objects of different lifetimes concurrently with System.gc().
- * @run main/othervm/timeout=300 -XX:+UseAltGCForwarding -Xlog:gc*=info -Xmx512m -XX:+UseSerialGC gc.stress.systemgc.TestSystemGCWithSerial 270
- */
-
-/*
- * @test id=alt-forwarding-unaligned
- * @key stress
- * @bug 8190703
- * @library /
- * @requires vm.gc.Serial
- * @requires vm.debug
- * @summary Stress the Serial GC full GC by allocating objects of different lifetimes concurrently with System.gc().
- * @run main/othervm/timeout=300 -XX:+UseAltGCForwarding -Xlog:gc*=info -Xmx700m -XX:+UseSerialGC gc.stress.systemgc.TestSystemGCWithSerial 270
- */
-
-/*
- * @test id=alt-forwarding-large-heap
- * @key stress
- * @bug 8190703
- * @library /
- * @requires vm.gc.Serial
- * @requires vm.debug
- * @requires (vm.bits == "64") & (os.maxMemory >= 6G)
- * @summary Stress the Serial GC full GC by allocating objects of different lifetimes concurrently with System.gc().
- * @run main/othervm/timeout=300 -XX:+UseAltGCForwarding -Xlog:gc*=info -Xmx6g -XX:+UseSerialGC gc.stress.systemgc.TestSystemGCWithSerial 270
  */
 public class TestSystemGCWithSerial {
     public static void main(String[] args) throws Exception {
